internal/scenarios/udpl4lb/manifests/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scn-udp-lb-gateway
  namespace: scn-udp-lb
spec:
  gatewayClassName: bnk-gatewayclass
  addresses:
  - type: IPAddress
    value: 203.0.113.107
  listeners:
  - name: udp-listener
    protocol: UDP
    port: 5005
    allowedRoutes:
      namespaces: {from: Same}
      kinds:
      - kind: L4Route
        group: gateway.k8s.f5net.com
